logs/dag_id=dag_top_best_sellers_books/run_id=manual__2024-12-22T14:55:10.356955+00:00/task_id=load_data_to_postgres/attempt=7.log
[2024-12-22T17:31:10.171+0000] {local_task_job_runner.py:123} INFO - ::group::Pre task execution logs
[2024-12-22T17:31:10.194+0000] {taskinstance.py:2613} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: dag_top_best_sellers_books.load_data_to_postgres manual__2024-12-22T14:55:10.356955+00:00 [queued]>
[2024-12-22T17:31:10.206+0000] {taskinstance.py:2613} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: dag_top_best_sellers_books.load_data_to_postgres manual__2024-12-22T14:55:10.356955+00:00 [queued]>
[2024-12-22T17:31:10.208+0000] {taskinstance.py:2866} INFO - Starting attempt 7 of 8
[2024-12-22T17:31:10.222+0000] {taskinstance.py:2889} INFO - Executing <Task(PythonOperator): load_data_to_postgres> on 2024-12-22 14:55:10.356955+00:00
[2024-12-22T17:31:10.233+0000] {warnings.py:112} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:70: DeprecationWarning: This process (pid=1670) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2024-12-22T17:31:10.239+0000] {standard_task_runner.py:72} INFO - Started process 1672 to run task
[2024-12-22T17:31:10.238+0000] {standard_task_runner.py:104} INFO - Running: ['***', 'tasks', 'run', 'dag_top_best_sellers_books', 'load_data_to_postgres', 'manual__2024-12-22T14:55:10.356955+00:00', '--job-id', '51', '--raw', '--subdir', 'DAGS_FOLDER/dag_test.py', '--cfg-path', '/tmp/tmpvr4y0gz4']
[2024-12-22T17:31:10.244+0000] {standard_task_runner.py:105} INFO - Job 51: Subtask load_data_to_postgres
[2024-12-22T17:31:10.596+0000] {task_command.py:467} INFO - Running <TaskInstance: dag_top_best_sellers_books.load_data_to_postgres manual__2024-12-22T14:55:10.356955+00:00 [running]> on host c50092bbd7fa
[2024-12-22T17:31:10.726+0000] {taskinstance.py:3132} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='dag_top_best_sellers_books' AIRFLOW_CTX_TASK_ID='load_data_to_postgres' AIRFLOW_CTX_EXECUTION_DATE='2024-12-22T14:55:10.356955+00:00' AIRFLOW_CTX_TRY_NUMBER='7' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-12-22T14:55:10.356955+00:00'
[2024-12-22T17:31:10.733+0000] {taskinstance.py:731} INFO - ::endgroup::
[2024-12-22T17:31:10.775+0000] {base.py:84} INFO - Retrieving connection 'books_connection'
[2024-12-22T17:31:10.796+0000] {dag_test.py:58} WARNING - author c'est fait !!!
[2024-12-22T17:31:10.806+0000] {base.py:84} INFO - Retrieving connection 'books_connection'
[2024-12-22T17:31:10.815+0000] {dag_test.py:60} WARNING - date c'est fait !!!
[2024-12-22T17:31:10.826+0000] {base.py:84} INFO - Retrieving connection 'books_connection'
[2024-12-22T17:31:10.837+0000] {taskinstance.py:3311} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 767, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 733, in _execute_callable
    return ExecutionCallableRunner(
           ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/operator_helpers.py", line 252, in run
    return self.func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 422, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 238, in execute
    return_value = self.execute_callable()
                   ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 256, in execute_callable
    return runner.run(*self.op_args, **self.op_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/operator_helpers.py", line 252, in run
    return self.func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/airflow/dags/dag_test.py", line 61, in load_data_to_postgres
    insert_to_postgres('books', pd.DataFrame(transformed_data['books']), postgres_conn_id)
  File "/opt/airflow/dags/scripts/insert_to_postgres.py", line 23, in insert_to_postgres
    cursor.execute(query)
psycopg2.errors.SyntaxError: syntax error at or near "s"
LINE 1: ...4.7 out of 5 stars', 'Storytelling with Data: Let's Practice...
                                                             ^

[2024-12-22T17:31:10.863+0000] {taskinstance.py:1225} INFO - Marking task as UP_FOR_RETRY. dag_id=dag_top_best_sellers_books, task_id=load_data_to_postgres, run_id=manual__2024-12-22T14:55:10.356955+00:00, execution_date=20241222T145510, start_date=20241222T173110, end_date=20241222T173110
[2024-12-22T17:31:10.883+0000] {taskinstance.py:340} INFO - ::group::Post task execution logs
[2024-12-22T17:31:10.886+0000] {standard_task_runner.py:124} ERROR - Failed to execute job 51 for task load_data_to_postgres (syntax error at or near "s"
LINE 1: ...4.7 out of 5 stars', 'Storytelling with Data: Let's Practice...
                                                             ^
; 1672)
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/task/task_runner/standard_task_runner.py", line 117, in _start_by_fork
    ret = args.func(args, dag=self.dag)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/cli_config.py", line 49, in command
    return func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/cli.py", line 116, in wrapper
    return f(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/commands/task_command.py", line 483, in task_run
    task_return_code = _run_task_by_selected_method(args, _dag, ti)
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/commands/task_command.py", line 256, in _run_task_by_selected_method
    return _run_raw_task(args, ti)
           ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/commands/task_command.py", line 341, in _run_raw_task
    return ti._run_raw_task(
           ^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/session.py", line 97, in wrapper
    return func(*args, session=session, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 3005, in _run_raw_task
    return _run_raw_task(
           ^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 273, in _run_raw_task
    TaskInstance._execute_task_with_callbacks(
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 3159, in _execute_task_with_callbacks
    result = self._execute_task(context, task_orig)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 3183, in _execute_task
    return _execute_task(self, context, task_orig)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 767, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 733, in _execute_callable
    return ExecutionCallableRunner(
           ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/operator_helpers.py", line 252, in run
    return self.func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 422, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 238, in execute
    return_value = self.execute_callable()
                   ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 256, in execute_callable
    return runner.run(*self.op_args, **self.op_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/operator_helpers.py", line 252, in run
    return self.func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/airflow/dags/dag_test.py", line 61, in load_data_to_postgres
    insert_to_postgres('books', pd.DataFrame(transformed_data['books']), postgres_conn_id)
  File "/opt/airflow/dags/scripts/insert_to_postgres.py", line 23, in insert_to_postgres
    cursor.execute(query)
psycopg2.errors.SyntaxError: syntax error at or near "s"
LINE 1: ...4.7 out of 5 stars', 'Storytelling with Data: Let's Practice...
                                                             ^

[2024-12-22T17:31:10.921+0000] {local_task_job_runner.py:266} INFO - Task exited with return code 1
[2024-12-22T17:31:11.186+0000] {taskinstance.py:3895} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-12-22T17:31:11.191+0000] {local_task_job_runner.py:245} INFO - ::endgroup::
